# MODULE_YIELD_DASHBOARD

./: .gitignore  ARCHITECTURE.md  HMB1_SLT_Pareto_Ravinder_Singh.pptx  Module_ELC_Yield_User_Guide.pptx  Module_Yield_Dashboard_Overview.pptx  No_Boot_Failure_Analysis_Summary.pptx  README.md  SOCAMM2_DRAM_Probe_Fail_Overlay_View.docx  Y6CP FID DPM Recovery Analysis.pptx  Y6CP_cDPM_Recovery_VP_Readout.pptx  Y6CP_cDPM_Recovery_VP_Readout_10wk.pptx  Y6CP_cDPM_Recovery_VP_Readout_SOCAMM2_7500MT.pptx  Y6CP_cDPM_Recovery_VP_Readout_SOCAMM2_7500MT_WW0615.pptx  app.py  fablot_row_analysis.py  fablot_row_chart.html  fid_fail_viewer_cli.py  fid_lookup.py  generate_vp_waterfall_pptx.py  generate_waterfall_pptx.py  help_assistant_log.csv  requirements.txt  run_dashboard.sh  ~$Y6CP_cDPM_Recovery_VP_Readout_SOCAMM2_7500MT_WW0615.pptx
sandbox/cdpm_recovery_app/: MU_AppStore_Publishing_Journey.pptx  README.md  cdpm_recovery_WW202614.html  cdpm_recovery_WW202615.html  cdpm_recovery_sim.py  create_pptx.py  publish.sh  pyproject.toml  test_annotations.html  test_pct_only.html  test_sidebyside.html  test_visible_pct.html  test_with_pct.html
sandbox/cdpm_recovery_app/cache/: fm_003086eb118b.json  fm_0050b3c6bdb7.json  fm_02ab690b787c.json  fm_0390b885cffc.json  fm_089fa5d93f9c.json  fm_0c86d2f0d00e.json  fm_0e47abf9242b.json  fm_0f2bb246c91c.json  fm_10396da74668.json  fm_105a888752e9.json  fm_12307eb897fc.json  fm_13d399916062.json  fm_142e44b94173.json  fm_143704842bf5.json  fm_167dbc31f430.json  fm_168ab0bab3d7.json  fm_16dd84b59cbe.json  fm_16ecc40f239c.json  fm_18a621fb2dff.json  (+282 more)
(+257 files in other folders)
